# friction_problem

./: .gitignore  CMakeLists.txt  Diploma.cpp  README.md  class_Matrix.cpp  class_Matrix.h  dinamic_solver_MFE.cpp  dinamic_solver_MFE.h  error_handling.cpp  error_handling.h  initial_conditions.cpp  initial_conditions.h  math_Function.cpp  math_Function.h  matrix_MFE.cpp  matrix_MFE.h  operator_overloading.cpp  solver_utils.cpp  write_function.cpp  write_function.h
apps/: diploma_main.cpp  friction_main.cpp
include/: class_Matrix.h  dinamic_solver_MFE.h  error_handling.h  initial_conditions.h  math_Function.h  matrix_MFE.h  operator_overloading.h  solver_utils.h  write_function.h
include/MFE_lib/: class_matrix.h  math_functions.h  write_functions.h
include/MFE_lib/functions_for_MFE/: dinamic_solver_MFE.h  initial_conditions.h  matrix_MFE.h  solver_utils.h
include/MFE_lib/types/: matrix_type.h  types.h
libs/MFE_lib/: .gitignore  CMakeLists.txt  CMakePresets.json
libs/MFE_lib/cmake/: MFE_libConfig.cmake.in  utils.cmake
libs/MFE_lib/include/MFE_lib/: active_indices.h  class_matrix.h  export.h  get_disps_func.h  math_functions.h  write_functions.h
libs/MFE_lib/include/MFE_lib/functions_for_MFE/: dinamic_solver_MFE.h  initial_conditions.h  matrix_MFE.h  solver_utils.h
libs/MFE_lib/include/MFE_lib/types/: matrix_type.h  types.h
libs/MFE_lib/src/: class_matrix.cpp  get_disps_func.cpp  math_functions.cpp  write_functions.cpp
libs/MFE_lib/src/error_handling/: error_handling.cpp  error_handling.h
libs/MFE_lib/src/functions_for_MFE/: dinamic_solver_MFE.cpp  initial_conditions.cpp  matrix_MFE.cpp  solver_utils.cpp
libs/MFE_lib/src/inputFunctions/: inputFunctions.cpp  inputFunctions.h
libs/MFE_lib/src/operator_overloading/: operator_overloading.cpp  operator_overloading.h
src/: CMakeLists.txt  Diploma.cpp  class_Matrix.cpp  dinamic_solver_MFE.cpp  diploma_main.cpp  initial_conditions.cpp  math_Function.cpp  math_functions.cpp  matrix_MFE.cpp  operator_overloading.cpp  solver_utils.cpp  write_function.cpp  write_functions.cpp
src/error_handling/: error_handling.cpp  error_handling.h
src/functions_for_MFE/: dinamic_solver_MFE.cpp  initial_conditions.cpp  matrix_MFE.cpp  solver_utils.cpp
src/operator_overloading/: operator_overloading.cpp  operator_overloading.h
